--- a/views/subcontracting_workorder.xml
+++ b/views/subcontracting_workorder.xml
@@ -31,14 +31,15 @@
                     <field name="is_subcontract" invisible="1"/>
                     <field name="previous_workorder_id" invisible="1"/>
                     <field name="delivery_challan" invisible="1"/>
+                    <field name="delivery_challan_no" invisible="0"/>
                 </xpath>
                 <xpath expr="//notebook/page[3]" position="after">
                     <page string="Subcontracting Info" attrs="{'invisible': [('is_subcontract', '!=', True)]}">
                         <group>
-                            <field name="subcontract_wo_vendor" attrs="{'readonly': [('state', '=', 'progress')]}"/>
-                            <field name="subcontract_wo_product" domain="[('type', '=', 'service')]" attrs="{'readonly': [('state', '=', 'progress')]}"/>
-                            <field name="subcontract_wo_service_cost" attrs="{'readonly': [('state', '=', 'progress')]}"/>
-                            <field name="subcontract_supplier_location" attrs="{'readonly': [('state', '=', 'progress')]}"/>
+                            <field name="subcontract_wo_vendor" attrs="{'readonly': [('is_rfq', '=', True)]}"/>
+                            <field name="subcontract_wo_product" domain="[('type', '=', 'service')]" attrs="{'readonly': [('is_rfq', '=', True)]}"/>
+                            <field name="subcontract_wo_service_cost" attrs="{'readonly': [('is_rfq', '=', True)]}"/>
+                            <field name="subcontract_supplier_location" attrs="{'readonly': [('is_rfq', '=', True)]}"/>
                             <field name="delivery_challan_id" string="Internal Transfer" invisible="1"/>
                         </group>
                     </page>
