--- a/report/report_views.xml
+++ b/report/report_views.xml
@@ -34,7 +34,7 @@
             report_type="qweb-pdf"
             name="subcontract.report_deliveryslip"
             file="subcontract.report_deliveryslip"
-            print_report_name="'Delivery Challan - %s - %s' % (object.name)"
+            print_report_name="'Delivery Challan - %s' % (object.name)"
             paperformat = "subcontract.paperformat_tax_invoice"
         />
     </data>
